# database_server

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.kr.md  README.md  README_8md.html  annotated.html  annotated_dup.js  auth__middleware_8cpp.html  auth__middleware_8cpp__incl.map  auth__middleware_8cpp__incl.md5  auth__middleware_8cpp_source.html  auth__middleware_8h.html  auth__middleware_8h.js  auth__middleware_8h__dep__incl.map  auth__middleware_8h__dep__incl.md5  auth__middleware_8h__incl.map  auth__middleware_8h__incl.md5  auth__middleware_8h_source.html  auth__serializer_8cpp.html  auth__serializer_8cpp__incl.map  auth__serializer_8cpp__incl.md5  auth__serializer_8cpp_source.html  classdatabase_1_1connection__pool-members.html  classdatabase_1_1connection__pool.html  classdatabase_1_1connection__pool.js  classdatabase_1_1connection__pool__base-members.html  classdatabase_1_1connection__pool__base.html  classdatabase_1_1connection__pool__base.js  classdatabase_1_1connection__pool__base__inherit__graph.map  classdatabase_1_1connection__pool__base__inherit__graph.md5  classdatabase_1_1connection__pool__coll__graph.md5  classdatabase_1_1connection__pool__inherit__graph.map  classdatabase_1_1connection__wrapper-members.html  classdatabase_1_1connection__wrapper.html  classdatabase_1_1connection__wrapper.js  classdatabase__server_1_1gateway_1_1async__query__job-members.html  classdatabase__server_1_1gateway_1_1async__query__job.html  (+838 more)
.github/workflows/: benchmarks.yml  build-Doxygen.yaml  ci.yml  coverage.yml  dependency-security-scan.yml  integration-tests.yml  sanitizers.yml  sbom.yml  static-analysis.yml
benchmarks/: CMakeLists.txt  gateway_benchmarks.cpp
cmake/: FindSystemDependency.cmake
docs/: ARCHITECTURE.kr.md  ARCHITECTURE.md
include/kcenon/database_server/: server_app.h
include/kcenon/database_server/core/: server_config.h
include/kcenon/database_server/gateway/: auth_middleware.h  container_compat.h  gateway_server.h  query_cache.h  query_handler_base.h  query_handlers.h  query_protocol.h  query_router.h  query_types.h  session_id_generator.h
include/kcenon/database_server/logging/: console_logger.h
include/kcenon/database_server/metrics/: metrics_base.h  query_collector_base.h  query_metrics.h  query_metrics_collector.h
include/kcenon/database_server/pooling/: connection_pool.h  connection_priority.h  connection_types.h  pool_metrics.h
include/kcenon/database_server/resilience/: connection_health_monitor.h  resilient_database_connection.h
scripts/: update-deps.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+89 more)
src/: main.cpp
src/core/: server_app.cpp  server_config.cpp
src/gateway/: auth_middleware.cpp  gateway_server.cpp  query_cache.cpp  query_handlers.cpp  query_protocol.cpp  query_router.cpp  session_id_generator.cpp
src/gateway/protocol/: auth_serializer.cpp  header_serializer.cpp  param_serializer.cpp  request_serializer.cpp  response_serializer.cpp  serialization_helpers.h
src/logging/: console_logger.cpp
src/metrics/: collector_integration.cpp  query_metrics_collector.cpp
src/modules/: database_server-core.cppm  database_server-gateway.cppm  database_server-metrics.cppm  database_server-pooling.cppm  database_server-resilience.cppm  database_server.cppm
src/pooling/: connection_pool.cpp
src/resilience/: connection_health_monitor.cpp  resilient_database_connection.cpp
tests/: CMakeLists.txt  auth_middleware_test.cpp  connection_pool_test.cpp  integration_test.cpp  query_cache_test.cpp  query_protocol_test.cpp  rate_limiter_test.cpp  resilience_test.cpp  session_id_test.cpp
